added subgroups handler and improved swagger
